# harbour-nami

./: .gitignore  ARCHITECTURE.md  BUILDING.md  CLAUDE.md  CMakeLists.txt  INSTALL.md  LICENSE  README.md  ROADMAP.md  TODO.md  harbour-nami.desktop  harbour-nami.pro
.github/workflows/: build.yml
python/: database.py  download_models.py  face_detector.py  face_pipeline.py  face_recognizer.py  model_downloader.py  nami_bridge.py  requirements.txt
python/models/: .gitkeep  DOWNLOAD_INSTRUCTIONS.md  README.md
qml/: harbour-nami.qml
qml/components/: FaceRecognitionManager.qml  InfoBanner.qml
qml/cover/: CoverPage.qml
qml/dialogs/: ConfirmDialog.qml  IdentifyFaceDialog.qml  RenamePersonDialog.qml  SelectContactDialog.qml  SelectPersonDialog.qml
qml/js/: faceutils.js
qml/pages/: AboutPage.qml  DayPhotosPage.qml  EventsPage.qml  FaceInPhotoPage.qml  IdentifyFacesPage.qml  MainPage.qml  MemoriesPage.qml  MemoryDetailPage.qml  ModelDownloadPage.qml  PersonDetailPage.qml  PersonPage.qml  PhotoViewerPage.qml  ScanResultsPage.qml  ScanningPage.qml  SettingsPage.qml  UnknownFacesPage.qml
rpm/: harbour-nami.changes  harbour-nami.yaml
scripts/: build_opencv_minimal.sh  download_models_for_build.sh  download_onnxruntime.sh  download_opencv_for_build.sh  install_opencv_on_device.sh  install_python_deps.sh
src/: exifreader.cpp  exifreader.h  facedatabase.cpp  facedatabase.h  facedetector.cpp  facedetector.h  faceimageprovider.cpp  facepipeline.cpp  facepipeline.h  facerecognizer.cpp  facerecognizer.h  harbour-nami.cpp  logging.cpp  logging.h  main.cpp
translations/: harbour-nami-de.ts  harbour-nami-es.ts  harbour-nami-fi.ts  harbour-nami-fr.ts  harbour-nami-it.ts  harbour-nami-no_NB  harbour-nami.ts
